--- a/Sam Auto/style.css
+++ b/Sam Auto/style.css
@@ -1,143 +1,3 @@
-/* body {
-  margin: 0;
-  min-height: 100vh;
-  background-color: #303030;
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-}
-.layoutHeader {
-  height: 5cm;
-  background-color: aqua;
-}
-.headerAndLogo {
-  text-align: center;
-  background-color: antiquewhite;
-  background: linear-gradient(to top, #303030, #2d42ff);
-  color: white;
-}
-
-input[type="checkbox"] {
-  display: none;
-}
-
-.navigationBar {
-  display: flex;
-  align-items: center;
-  background-color: teal;
-  color: #fff;
-}
-
-.hamburger {
-  display: none;
-  font-size: 24px;
-  user-select: none;
-}
-.nav-links {
-  display: flex;
-}
-.menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0;
-  list-style-type: none; 
-}
-
-
-@media (max-width: 768px) {
-  .menu {
-    display: none;
-    position: absolute;
-    background-color: teal;
-    right: 0;
-    left: 0;
-    text-align: center;
-    padding: 16px 0;
-  }
-
-
-  .menu li:hover {
-    display: inline-block;
-    background-color: #4c9e9e;
-    transition: 0.3s ease;
-  }
-
-
-  .menu li + li {
-    margin-top: 12px;
-  }
-
-  input[type="checkbox"]:checked ~ .menu {
-    display: block;
-  }
-
-  .hamburger {
-    display: block;
-  }
-}
-
-.layoutMiddleLayer {
-  flex: 1; 
-  width: 900px;
-  max-width: 100%;
-  margin: 0 auto; 
-  background-color: rgb(161, 162, 162);
-  overflow: auto; 
-  padding-bottom: 100px;
-}
-
-.orderBar {
-  background-color: rgb(32, 59, 59);
-  height: 3cm;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.orderBar button {
-  height: 1.5cm;
-  width: 7cm;
-  font-size: 25px;
-  background-color: #5e5e5e;
-  border: none;
-}
-
-.orderBar button:active {
-  background-color: #2f3992;
-}
-.contentHolder {
-  margin-top: 10px;
-  display: grid;
-  grid-gap: 10px;
-  margin-bottom: 10px;
-}
-.car {
-  background-color: aquamarine;
-  height: 4cm;
-}
-
-
-#footer {
-  display: block;
-  background-color: bisque;
-  height: 100px;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-body {
-  overflow: auto;
-}
-
-body::after {
-  content: "";
-  display: block;
-  height: 100px;
-} */
-
 body,
 html {
   margin: 0;
@@ -236,6 +96,11 @@ input[type="checkbox"] {
 
   .hamburger {
     display: block;
+  }
+  .car {
+    height: 10cm; /* Adjusted height for smaller screens */
+    width: 500px; /* Keep width at 90% for smaller screens */
+    margin: 0 auto;
   }
 }
 
