--- a/Sam Auto/style.css
+++ b/Sam Auto/style.css
@@ -32,10 +32,12 @@ input[type="checkbox"] {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 100px;
-  background-color: teal;
+  padding: 0 50px;
+  margin: 0 30px;
+  /* background-color: teal; */
   color: #fff;
   height: 40%;
+  border: 2px solid white;
   /* width: 100%; */
 }
 
@@ -55,13 +57,16 @@ input[type="checkbox"] {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  /* padding: 0 100px; */
+
   list-style-type: none;
-  background-color: teal;
+  /* background-color: teal; */
 }
 
 .menu a {
   font-size: 25px;
   text-decoration: none;
+  color: white;
 }
 /* .hamburger {
   display: none; 
@@ -69,11 +74,11 @@ input[type="checkbox"] {
   user-select: none;
 } */
 
-@media (max-width: 768px) {
+@media (max-width: 915px) {
   .menu {
     display: none;
     position: absolute;
-    background-color: teal;
+    background-color: #2d42ff;
     right: 0;
     left: 0;
     text-align: center;
@@ -98,9 +103,17 @@ input[type="checkbox"] {
     display: block;
   }
   .car {
-    height: 10cm; /* Adjusted height for smaller screens */
-    width: 500px; /* Keep width at 90% for smaller screens */
+    height: 10cm !important;
+    width: 500px;
     margin: 0 auto;
+  }
+  .orderBar button {
+    width: 3cm;
+    /* padding: 0 20px; */
+    margin: 0 20px;
+  }
+  .orderBar {
+    justify-content: space-between;
   }
 }
 
@@ -114,11 +127,12 @@ input[type="checkbox"] {
 }
 
 .orderBar {
-  background-color: rgb(32, 59, 59);
+  /* background-color: rgb(32, 59, 59); */
   height: 3cm;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  /* width: 90%; */
 }
 
 .orderBar button {
@@ -127,6 +141,7 @@ input[type="checkbox"] {
   font-size: 25px;
   background-color: #5e5e5e;
   border: none;
+  border-radius: 10px;
 }
 .orderBar button:active {
   background-color: #2f3992;
@@ -139,13 +154,13 @@ input[type="checkbox"] {
   margin-bottom: 10px;
 }
 .car {
-  background-color: aquamarine;
-  height: 4cm;
+  /* background-color: aquamarine; */
+  height: 5cm;
 }
 
 .contentHolder div {
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 3px solid white;
+  /* border-radius: 5px; */
   padding: 20px;
   margin-bottom: 20px;
 }
