--- a/Sam Auto/style.css
+++ b/Sam Auto/style.css
@@ -68,11 +68,6 @@ input[type="checkbox"] {
   text-decoration: none;
   color: white;
 }
-/* .hamburger {
-  display: none; 
-  font-size: 24px;
-  user-select: none;
-} */
 
 @media (max-width: 915px) {
   .menu {
@@ -104,11 +99,11 @@ input[type="checkbox"] {
   }
   .car {
     height: 10cm !important;
-    width: 500px;
+    width: 470px;
     margin: 0 auto;
   }
   .orderBar button {
-    width: 3cm;
+    width: 6cm !important;
     /* padding: 0 20px; */
     margin: 0 20px;
   }
