--- a/Sam Auto/style.css
+++ b/Sam Auto/style.css
@@ -1,160 +1,3 @@
-/* body,
-html {
-  margin: 0;
-  padding: 0;
-  background-color: #303030;
-}
-
-.layoutHeader {
-  height: 5cm;
-  color: #fff;
-  text-align: center;
-}
-
-.headerAndLogo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: antiquewhite;
-  background: linear-gradient(to top, #303030, #2d42ff);
-  color: white;
-  width: 100%;
-  height: 50%;
-}
-
-input[type="checkbox"] {
-  display: none;
-}
-
-.navigationBar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 50px;
-  margin: 0 30px;
-  color: #fff;
-  height: 40%;
-  border: 2px solid white;
-}
-
-.hamburger {
-  display: none;
-  font-size: 50px;
-  user-select: none;
-}
-.nav-links {
-  display: flex;
-  text-align: center;
-  justify-content: space-between;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  list-style-type: none;
-}
-
-.menu a {
-  font-size: 25px;
-  text-decoration: none;
-  color: white;
-}
-
-@media (max-width: 915px) {
-  .menu {
-    display: none;
-    position: absolute;
-    background-color: #2d42ff;
-    right: 0;
-    left: 0;
-    text-align: center;
-    padding: 16px 0;
-  }
-
-  .menu li:hover {
-    display: inline-block;
-    background-color: #4c9e9e;
-    transition: 0.3s ease;
-  }
-
-  .menu li + li {
-    margin-top: 12px;
-  }
-
-  input[type="checkbox"]:checked ~ .menu {
-    display: block;
-  }
-
-  .hamburger {
-    display: block;
-  }
-  .car {
-    height: 10cm !important;
-    width: 470px;
-    margin: 0 auto;
-  }
-  .orderBar button {
-    width: 6cm !important;
-    margin: 0 20px;
-  }
-  .orderBar {
-    justify-content: space-between;
-  }
-}
-
-.layoutMiddleLayer {
-  max-width: 900px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-rows: 50px auto;
-  gap: 60px;
-}
-
-.orderBar {
-  height: 3cm;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.orderBar button {
-  height: 1.5cm;
-  width: 7cm;
-  font-size: 25px;
-  background-color: #5e5e5e;
-  border: none;
-  border-radius: 10px;
-}
-.orderBar button:active {
-  background-color: #2f3992;
-}
-
-.contentHolder {
-  margin-top: 20px;
-  display: grid;
-  grid-gap: 10px;
-  margin-bottom: 10px;
-}
-.car {
-  height: 5cm;
-}
-
-.contentHolder div {
-  border: 3px solid white;
-  padding: 20px;
-  margin-bottom: 20px;
-}
-
-.footer {
-  background-color: #920000;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
-} */
-
 body,
 html {
   margin: 0;
@@ -282,24 +125,29 @@ input[type="checkbox"] {
   .orderBar {
     justify-content: space-between;
   }
+
+  .layoutMiddleLayerHomePage {
+    grid-template:
+      "a a a" 100px
+      "b b b" auto
+      "c c c" auto / 3fr 1fr 1fr !important;
+  }
 }
 
-.layoutMiddleLayer {
+.layoutMiddleLayerAllVehicles {
   /* padding: 20px; */
   max-width: 900px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 50px auto;
+  grid-template-rows: 70px auto;
   gap: 60px;
 }
 
 .orderBar {
-  /* background-color: rgb(32, 59, 59); */
   height: 3cm;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* width: 90%; */
 }
 
 .orderBar button {
@@ -339,4 +187,49 @@ input[type="checkbox"] {
   color: #fff;
   padding: 20px;
   text-align: center;
+  margin-top: 15px;
+}
+
+.layoutMiddleLayerHomePage {
+  max-width: 900px;
+  margin: 0 auto;
+  height: auto;
+  /* background-color: #2d42ff; */
+  display: grid;
+  grid-template:
+    "a a a" 100px
+    "b c c" auto
+    "b c c" auto / 3fr 1fr 1fr;
+  gap: 10px;
+}
+
+.titleHolder {
+  grid-area: a;
+  /* background-color: #2ec4b6; */
+  text-align: center;
+  color: white;
+  font-size: 30px;
+}
+.textHolder {
+  grid-area: b;
+  /* background-color: #965757; */
+  font-size: 23px;
+  color: white;
+}
+.textHolder p {
+  padding: 0 20px;
+  margin-top: 15%;
+  margin-bottom: 15%;
+}
+.imageHolder {
+  grid-area: c;
+  /* background-color: #ee4c4c; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.imageHolder img {
+  width: 95%;
+  color: white;
+  box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px white;
 }
