--- a/Sam Auto/style.css
+++ b/Sam Auto/style.css
@@ -246,21 +246,29 @@ input[type="checkbox"] {
     "b b a" auto
     "b b c" auto
     "b b c" auto / 1fr 0.5fr 2fr;
-  gap: 10px;
 }
 
 .headingHolder {
   grid-area: a;
+  width: 90%;
   /* background-color: #965757; */
   font-size: 23px;
   color: white;
+  background-color: #474847;
+  padding: 0 10px;
+
   /* text-align: center; */
 }
 .formHolder {
   grid-area: c;
-  background-color: wheat;
+  width: 90%;
+
+  background-color: #474847;
   height: 5cm;
   height: auto;
+  display: grid;
+  gap: 10px;
+  padding: 0 10px;
 }
 .image {
   grid-area: b;
@@ -270,4 +278,63 @@ input[type="checkbox"] {
 }
 .image img {
   width: 60%;
+}
+.name {
+  margin-top: 20px;
+  margin-bottom: 7px;
+  /* padding: 0 10px; */
+  color: silver;
+}
+.inputBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 0 10px; */
+}
+
+.inputBoxPhone {
+  display: flex;
+  align-items: center;
+  /* padding: 0 10px; */
+}
+.input {
+  max-width: 9.5cm;
+  width: 90%;
+  height: 1cm;
+  border-radius: 10px;
+  border-color: rgb(68, 68, 68);
+  border-width: 2px;
+  font-size: 20px;
+}
+
+.selectedCountryCode {
+  width: 3.3cm;
+  height: 1cm;
+  border-radius: 10px;
+  z-index: 1;
+  font-size: 16px;
+}
+
+.inputPhone {
+  max-width: 6cm;
+  width: 90%;
+  height: 1cm;
+  border-radius: 10px;
+  border-color: rgb(68, 68, 68);
+  border-width: 2px;
+  font-size: 20px;
+}
+
+.submitBtn {
+  max-width: 9.5cm;
+  width: 90%;
+  height: 1cm;
+  border-radius: 10px;
+  background-color: rgba(30, 5, 85, 255);
+  color: floralwhite;
+  margin-bottom: 10px;
+}
+
+.buttonHolder {
+  margin-top: 40px;
 }
