--- a/Sam Auto/CustomLogIn.css
+++ b/Sam Auto/CustomLogIn.css
@@ -1,4 +1,4 @@
-.layoutMiddleLayerSignUp {
+.layoutMiddleLayerLogIn {
   max-width: 900px;
   margin: 0 auto;
   height: auto;
@@ -67,6 +67,7 @@
   justify-content: right;
   max-width: 8.5cm;
   width: 85%;
+  margin: 0;
 }
 .ForgotPasswordPanel li {
   list-style-type: none;
@@ -92,9 +93,34 @@
 }
 
 .buttonHolder {
-  margin-top: 40px;
+  margin-top: 10px;
 }
 .imgShadow {
   color: white;
   box-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px white;
+}
+
+.NotAMemberPanel {
+  display: flex;
+  max-width: 9.5cm;
+  width: 90%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
+
+.NavToSignUp {
+  display: flex;
+  justify-content: left;
+  margin: 0;
+  padding-left: 15%;
+}
+.NavToSignUp li {
+  list-style-type: none;
+}
+.NavToSignUp a {
+  font-size: 18px;
+  text-decoration: underline;
+  color: #7b89ff;
 }
